# django-pystagram

./: .python-version  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
member/: admin.py  form.py  models.py  views.py
member/migrations/: 0001_initial.py
post/: admin.py  models.py  views.py
post/migrations/: 0001_initial.py  0002_alter_postimage_options_alter_postimage_post_comment_and_more.py
static/css/: style.css
templates/: base.html
templates/auth/: login.html  signup.html  signup_done.html
templates/post/: form.html  list.html
utils/: models.py
