[project]
name = "oz-instagram"
version = "0.1.0"
description = ""
authors = [
    {name = "moxopills",email = "moxopills@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ipython (>=9.5.0,<10.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
